--- a/README.org
+++ b/README.org
@@ -24,7 +24,7 @@ Feel free to open issues and pull requests if you can offer any improvement or s
 + [[https://github.com/dimitri/el-get][el-get]] - Look's Amazing to me. If you have packages from various types of locations: github, emacswiki, GNU ELPA or Marmalade, privately hosted pages, git, bzr, CVS, el-get is one of the goto choices.
 + [[https://github.com/raxod502/straight.el][straight.el]] - It has a lot of features and many people swear by it
 + [[https://framagit.org/steckerhalter/quelpa][quelpa]] - Build and install your Emacs Lisp packages on-the-fly and directly from source.
-+ [[https://github.com/conao3/feather.el][feather.el]] - This one seems to be similar to this packages but better. Haven't tried though.
++ [[https://github.com/conao3/feather.el][feather.el]] - This one seems to be similar to =emacsit= but better. Haven't tried though.
 
 Use one of the above, since they are much better supported.
 
