--- a/README.org
+++ b/README.org
@@ -37,7 +37,7 @@ git clone --depth=1 https://github.com/SidharthArya/emacsit $HOME/.emacs.d/packa
 
 Add this to your ~.emacs~ file. 
 #+BEGIN_SRC emacs-lisp
-(add-to-list 'load-path "path-to-emacsit.el directory")
+(add-to-list 'load-path "~/.emacs.d/packages/SidharthArya/emacsit")
 (require 'emacsit)
 (setq emacsit::packages '( ;; List of packages you need
 			  abo-abo/avy
